tests/compilefail10.out
[1mtests/compilefail10.pas:8:5: [0m[1m[91merror:[0m Semicolon expected
     8 | 	writeln(i+j);